[#282] refactor: test 코드 데이터베이스에 공통 값 저장하는 방식 취소